fixed genres on mobile

--- a/src/screens/MovieDetails/movie_details.module.scss
+++ b/src/screens/MovieDetails/movie_details.module.scss
@@ -102,3 +102,12 @@
 		width: 30rem;
 	}
 }
+
+.genres {
+	@include respond(phone) {
+		font-size: 2rem;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+}
